--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^16.7.1",
-    "mongoose": "^5.9.9"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^5.9.9",
+    "prettier": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
